# ie-titanic-utils

./: README.md  app.py  pyproject.toml  requirements.txt  setup_script.sh  str_utils.py
src/ie_titanic_utils/: __init__.py  str_utils.py
tests/: test_str_utils.py
