[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ie_titanic_utils"
authors = [{name = "Maria Aguilera García", email = "maria.aguilera@student.ie.edu"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "pandas>=1.4",
]